# rust-projects

./: .gitignore  Cargo.toml
src/: main.rs
transformer/: Cargo.toml
transformer/data/: config.toml
transformer/docker/postgresql/: docker-compose.yml
transformer/docker/redis/: docker-compose.yml
transformer/src/: check_sqlite.rs  main.rs  toml_dynamic.rs  toml_static.rs
transformer/src/my_json/: mod.rs  use_dynamic.rs  use_static.rs
transformer/src/my_toml/: mod.rs  use_dynamic.rs  use_static.rs
transformer/src/output/: redis.rs  sqlite.rs
transformer/src/types/: config.rs  mod.rs  sales_and_products.rs
udp-socket/: Cargo.toml
udp-socket/client/src/: main.rs
udp-socket/logger/: Cargo.toml
udp-socket/logger/src/: lib.rs
udp-socket/server/: Cargo.toml  build.rs
udp-socket/server/src/: main.rs  tuntap.c
web-socket/: Cargo.toml
web-socket/src/: handler.rs  main.rs  types.rs
