[package]
name = "transformer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.37"
colorize = "0.1.0"
redis = "0.25.3"
rusqlite = "0.31.0"
serde = "1.0.197"
serde_derive = "1.0.197"
serde_json = "1.0.115"
toml = "0.8.12"
